@@ -1,4 +1,5 @@
 1.0.2
+Fixed new windows occasionally not getting focus.
 Removed alarm timer, now use 'kill -SIGUSR1 $(pgrep "^lfswm2$")' to signal a change.
 Code clean.
 Fixed some configure window events.
