@@ -1,4 +1,5 @@
 0.2.0
+Updated lfstrayprefs.
 Added lfstrayprefs.
 Updated lfswm2prefs.
 Update to use new prefsclass functions.
